graphchan_backend/check_backend_2.txt
warning: `/Users/max/.cargo/config` is deprecated in favor of `config.toml`
note: if you need to support cargo 1.38 or earlier, you can symlink `config` to `config.toml`
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
    Checking graphchan_backend v0.1.0 (/Users/max/Code/OrbWeaver/graphchan_backend)
error: cannot find derive macro `Deserialize` in this scope
   --> graphchan_backend/src/peers.rs:83:35
    |
 83 | #[derive(Debug, Clone, Serialize, Deserialize)]
    |                                   ^^^^^^^^^^^
    |
   ::: /Users/max/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_derive-1.0.228/src/lib.rs:114:1
    |
114 | pub fn derive_serialize(input: TokenStream) -> TokenStream {
    | ---------------------------------------------------------- similarly named derive macro `Serialize` defined here
    |
help: a derive macro with a similar name exists
    |
 83 - #[derive(Debug, Clone, Serialize, Deserialize)]
 83 + #[derive(Debug, Clone, Serialize, Serialize)]
    |
help: consider importing this derive macro
    |
  1 + use serde::Deserialize;
    |

error[E0277]: the trait bound `PeerView: serde::Deserialize<'de>` is not satisfied
    --> graphchan_backend/src/threading.rs:179:16
     |
 179 |     pub peers: Vec<crate::peers::PeerView>,
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Deserialize<'_>` is not implemented for `PeerView`
    --> graphchan_backend/src/peers.rs:84:1
     |
  84 | pub struct PeerView {
     | ^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `PeerView` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_bytes::bytearray::ByteArray<N>` implements `Deserialize<'de>`
               `&'a serde_bytes::bytes::Bytes` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
             and 373 others
     = note: required for `Vec<PeerView>` to implement `Deserialize<'_>`
note: required by a bound in `next_element`
    --> /Users/max/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1771:12
     |
1769 |     fn next_element<T>(&mut self) -> Result<Option<T>, Self::Error>
     |        ------------ required by a bound in this associated function
1770 |     where
1771 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `SeqAccess::next_element`

error[E0277]: the trait bound `PeerView: serde::Deserialize<'de>` is not satisfied
    --> graphchan_backend/src/threading.rs:179:16
     |
 179 |     pub peers: Vec<crate::peers::PeerView>,
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Deserialize<'_>` is not implemented for `PeerView`
    --> graphchan_backend/src/peers.rs:84:1
     |
  84 | pub struct PeerView {
     | ^^^^^^^^^^^^^^^^^^^
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `PeerView` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               `&'a [u8]` implements `Deserialize<'de>`
               `&'a serde_bytes::bytearray::ByteArray<N>` implements `Deserialize<'de>`
               `&'a serde_bytes::bytes::Bytes` implements `Deserialize<'de>`
               `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
               `&'a std::path::Path` implements `Deserialize<'de>`
               `&'a str` implements `Deserialize<'de>`
               `()` implements `Deserialize<'de>`
               `(T,)` implements `Deserialize<'de>`
             and 373 others
     = note: required for `Vec<PeerView>` to implement `Deserialize<'_>`
note: required by a bound in `next_value`
    --> /Users/max/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde_core-1.0.228/src/de/mod.rs:1916:12
     |
1914 |     fn next_value<V>(&mut self) -> Result<V, Self::Error>
     |        ---------- required by a bound in this associated function
1915 |     where
1916 |         V: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `MapAccess::next_value`

error[E0277]: the trait bound `PeerView: serde::Deserialize<'de>` is not satisfied
   --> graphchan_backend/src/threading.rs:175:35
    |
175 | #[derive(Debug, Clone, Serialize, Deserialize)]
    |                                   ^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Deserialize<'_>` is not implemented for `PeerView`
   --> graphchan_backend/src/peers.rs:84:1
    |
 84 | pub struct PeerView {
    | ^^^^^^^^^^^^^^^^^^^
    = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `PeerView` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Deserialize<'de>`:
              `&'a [u8]` implements `Deserialize<'de>`
              `&'a serde_bytes::bytearray::ByteArray<N>` implements `Deserialize<'de>`
              `&'a serde_bytes::bytes::Bytes` implements `Deserialize<'de>`
              `&'a serde_json::value::RawValue` implements `Deserialize<'de>`
              `&'a std::path::Path` implements `Deserialize<'de>`
              `&'a str` implements `Deserialize<'de>`
              `()` implements `Deserialize<'de>`
              `(T,)` implements `Deserialize<'de>`
            and 373 others
    = note: required for `Vec<PeerView>` to implement `Deserialize<'_>`
note: required by a bound in `api::_::_serde::__private228::de::missing_field`
   --> /Users/max/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/serde-1.0.228/src/private/de.rs:26:8
    |
 24 | pub fn missing_field<'de, V, E>(field: &'static str) -> Result<V, E>
    |        ------------- required by a bound in this function
 25 | where
 26 |     V: Deserialize<'de>,
    |        ^^^^^^^^^^^^^^^^ required by this bound in `missing_field`
    = note: this error originates in the derive macro `Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `graphchan_backend` (lib) due to 4 previous errors
